# geminhack

./: .gitignore  Jenkinsfile  Jenkinsfile.bak  MANIFEST.in  Pipfile  README.md  discover.py  gegirun.sh  runner.bat.bak  setup.cfg  stime.csv
geminhack/: __init__.py  application.py  ge2gi.py  geminhack.py  geminlib.py  githublib.py  memoizer.py  trellolib.py  zubelib.py
geminhack/statics/: ghack.css
geminhack/templates/: base.html  home.html  ticktable.html  wip.html
