[metadata]
name = geminhack
version = 0.3.0
url = https://github.com/prometeia/geminhack
maintainer = Denis Brandolini
maintainer_email = denis.brandolini@prometeia.com
description = GEMINI facilitator

[options]
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Flask
    pymongo

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    geminhack